@@ -146,6 +146,7 @@ function createAPMError (args, cb) {
   if (args.trans) {
     error.transaction_id = args.trans.id
     error.transaction = {
+      name: args.trans.name,
       type: args.trans.type,
       sampled: args.trans.sampled
     }
